# monorepo

./: .bazelrc  .gitignore  MODULE.bazel  README.md  maven_install.json  package-lock.json  package.json
hello-world/: BUILD  MODULE.bazel
hello-world/src/main/java/helloworld/: BUILD
hello-world/src/main/kotlin/helloworld/: BUILD  HelloWorld.kt
rust-learning/minigrep/src/: lib.rs  main.rs
treasury/: BUILD.bazel  MODULE.bazel
treasury/src/main/kotlin/io/github/tacascer/treasury/: BUILD.bazel  Treasury.kt  TreasuryApplication.kt
