load("@rules_kotlin//kotlin:core.bzl", "kt_kotlinc_options")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_fix", "ktlint_test")
load("@rules_spring//springboot:springboot.bzl", "springboot")

ktlint_fix(
    name = "lint_fix",
    srcs = glob(["**/*.kt"]),
)

ktlint_test(
    name = "lint_test",
    srcs = glob(["**/*.kt"]),
)

deps = [
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_boot_spring_boot_actuator",
    "@maven//:org_springframework_boot_spring_boot_actuator_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_loader",
    "@maven//:org_springframework_boot_spring_boot_starter",
    "@maven//:org_springframework_boot_spring_boot_starter_logging",
    "@maven//:org_springframework_spring_aop",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_spring_expression",
    "@maven//:org_springframework_spring_web",
]

kt_kotlinc_options(
    name = "kotlinc_options",
    jvm_target = "17",
    x_jsr_305 = "strict",
)

kt_jvm_library(
    name = "treasury_lib",
    srcs = glob(["**/*.kt"]),
    kotlinc_opts = ":kotlinc_options",
    deps = deps,
)

springboot(
    name = "treasury",
    boot_app_class = "io.github.tacascer.treasury.TreasuryApplicationKt",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":treasury_lib",
)
